--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/bulma/bulma.css">
+    <!-- <link rel="stylesheet" href="/css/skeleton.css"> -->
     <link rel="stylesheet" href="/css/common.css">
     <title>Document</title>
 </head>
